# MYStockTrade

./: LICENSE  README.md  pyproject.toml  pytest.ini
apps/fiavestXT/: main.py
libs/klsescreener/src/: __init__.py  resolution.py  screener.py  stock.py
libs/klsescreener/tests/: pytest.ini  test_screener.py  test_stock.py
libs/shared/src/: __init__.py  decorators.py  logger.py
